--- a/pdftotable.ipynb
+++ b/pdftotable.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "# Specify the path to the PDF file\n",
     "pdf_path = './AB1_CUT.pdf'\n",
-    "outputfilename = './test.csv'\n",
+    "outputfilename = './Final_AST_AB1.csv'\n",
     "textfilename = './AB1.txt'"
    ]
   },
